Make image registry URL customizable in 'restrict-image-registries' policy

--- a/best-practices/restrict-image-registries/restrict-image-registries.yaml
+++ b/best-practices/restrict-image-registries/restrict-image-registries.yaml
@@ -30,8 +30,8 @@ spec:
       pattern:
         spec:
           =(ephemeralContainers):
-          - image: "eu.foo.io/* | bar.io/*"
+          - image: "{{ image.registry.url }}/*"
           =(initContainers):
-          - image: "eu.foo.io/* | bar.io/*"
+          - image: "{{ image.registry.url }}/*"
           containers:
-          - image: "eu.foo.io/* | bar.io/*"
+          - image: "{{ image.registry.url }}/*"
